--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "scroll-data-hook": "^1.0.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
