--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-tooltip": "^4.2.17",
     "scroll-data-hook": "^1.0.4",
     "web-vitals": "^1.1.0"
   },
